do task api visited

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -34,4 +34,12 @@ destination.delete.success = Destination delete successfully!
 destination.get.all.success = Get list destinations successfully!
 destination.get.detail.success = Get detail Destination successfully!
 
-
+# Visited
+visited.destinationId.validate = Field destinationId must be not null!
+visited.userId.validate = Field userId must be not null!
+visited.visitedTime.validate = Field VisitedTime must be not null!
+visited.add.success = Visited add successfully!
+visited.update.success = Visited update successfully!
+visited.delete.success = Visited delete successfully!
+visited.get.all.success = Get list Visited successfully!
+visited.get.detail.success = Get detail Visited successfully!
