--- a/src/main/resources/i18n/messages_vi.properties
+++ b/src/main/resources/i18n/messages_vi.properties
@@ -32,5 +32,15 @@ destination.add.success = Thêm điểm đến thành công!
 destinations.update.success = Cập nhật danh sách điểm đến thành công!
 destination.update.success = Cập nhật điểm đến thành công!
 destination.delete.success = Xóa điểm đến thành công!
-destination.all.success = Lấy danh sách điểm đến thành công!
-destination.detail.success = Lấy chi tiết điểm đến thành công!
+destination.get.all.success = Lấy danh sách điểm đến thành công!
+destination.get.detail.success = Lấy chi tiết điểm đến thành công!
+
+# Visited
+visited.destinationId.validate = Trường destinationId không được bỏ trống!
+visited.userId.validate = Trường userId không được bỏ trống!
+visited.visitedTime.validate = Trường visitedTime không được bỏ trống!
+visited.add.success = Thêm chuyến đi đáng nhớ thành công!
+visited.update.success = Cập nhật chuyến đi đáng nhớ thành công!
+visited.delete.success = Xóa chuyến đi thành công!
+visited.get.all.success = Lấy danh sách chuyến đi đáng nhớ thành công!
+visited.get.detail.success = Tải chuyến đi đáng nhớ thành công!
