--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -2,7 +2,10 @@ user.login.success = Login successfully!
 user.logout.success = Logout successfully!
 
 #error
-page.size.error.null = "Params page and size must be null!"
+page.size.error.null = Params page and size must be null!
+
+#exception
+exception.entity.not.found  = {0} id: {1} not found!
 
 #common
 entity.id.validate = Field id must be not blank!
@@ -43,3 +46,17 @@ visited.update.success = Visited update successfully!
 visited.delete.success = Visited delete successfully!
 visited.get.all.success = Get list Visited successfully!
 visited.get.detail.success = Get detail Visited successfully!
+
+# WhiteList
+whitelist.name = WhiteList
+whitelist.destinationId.validate.uuid = Field destinationId not match format type of uuid!
+whitelist.userId.validate.uuid = Field userId not match format type of uuid!!
+whitelist.userId.validate = Field userId must be not null!
+whitelist.destinationId.validate = Field userId must be not null!
+whitelist.add.success = WhiteList add successfully!
+whitelist.update.success = WhiteList update successfully!
+whitelist.delete.success = WhiteList delete successfully!
+whitelist.get.detail.success = Get detail WhiteList successfully!
+whitelist.get.all.success = Get list WhiteList successfully!
+whitelist.get.all.fail = Get list WhiteList failure!
+
