--- a/src/main/resources/i18n/messages_vi.properties
+++ b/src/main/resources/i18n/messages_vi.properties
@@ -2,7 +2,11 @@ user.login.success = Đăng nhập thành công!
 user.logout.success = Bạn đã đăng xuất!
 
 #error
-page.size.error.null = "Thông số page và size không được bỏ trống!"
+page.size.error.null = Thông số page và size không được bỏ trống!
+
+#exception
+#exception
+exception.entity.not.found = {0} id: {1} không tìm thấy!
 
 #common
 entity.id.validate = Trường id không được bỏ trống!
@@ -44,3 +48,15 @@ visited.update.success = Cập nhật chuyến đi đáng nhớ thành công!
 visited.delete.success = Xóa chuyến đi thành công!
 visited.get.all.success = Lấy danh sách chuyến đi đáng nhớ thành công!
 visited.get.detail.success = Tải chuyến đi đáng nhớ thành công!
+
+# WhiteList
+whitelist.name = Địa điểm ưa thích
+whitelist.destinationId.validate = Trường destinationId không được bỏ trống!
+whitelist.userId.validate = Trường userId không được bỏ trống!
+whitelist.userId.validate.uuid = Field userId chưa đúng kiểu UUID!
+whitelist.destinationId.validate.uuid = Field destinationId chưa đúng kiểu UUID!
+whitelist.add.success = Thêm vào danh sách sẽ đi thành công!
+whitelist.delete.success = Xóa địa điểm thành công!
+whitelist.get.detail.success = Tải chuyến đi thành công!
+whitelist.get.all.success = Tải danh sách chuyến đi thàng công!
+whitelist.get.all.fail = Tải danh sách chuyến đi thất bại!
